{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 21,
  "lineage": "d8f56cbc-b4ef-325d-df29-8655406f4ecc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f388cbd7cf902241",
            "domain": "vpc",
            "id": "eipalloc-0f388cbd7cf902241",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-46-216.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.46.216",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-elasticIP"
            },
            "tags_all": {
              "Name": "test-elasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af25d0df86db00c1",
            "arn": "arn:aws:ec2:ap-south-1:255645000496:instance/i-0c4efb25b14389bce",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4efb25b14389bce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0d01fd2d17f826af3",
            "private_dns": "ip-192-168-0-53.ap-south-1.compute.internal",
            "private_ip": "192.168.0.53",
            "public_dns": "ec2-3-109-217-229.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.217.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-089ecc3c469cb2e48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081566b57d657efa4",
            "tags": {
              "Name": "test-1"
            },
            "tags_all": {
              "Name": "test-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cf5cbbbc3a87c99"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.public-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af25d0df86db00c1",
            "arn": "arn:aws:ec2:ap-south-1:255645000496:instance/i-09b8fdfa480f51c06",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b8fdfa480f51c06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0f5fd67f7bdd74a96",
            "private_dns": "ip-192-168-2-175.ap-south-1.compute.internal",
            "private_ip": "192.168.2.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0551502b696c52d2d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d319f40bec47144",
            "tags": {
              "Name": "test-2"
            },
            "tags_all": {
              "Name": "test-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cf5cbbbc3a87c99"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.private-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af25d0df86db00c1",
            "arn": "arn:aws:ec2:ap-south-1:255645000496:instance/i-08547696aebf11632",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08547696aebf11632",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0edbfbde360951ab6",
            "private_dns": "ip-192-168-0-247.ap-south-1.compute.internal",
            "private_ip": "192.168.0.247",
            "public_dns": "ec2-13-234-114-113.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.114.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059a52d043ed1d898",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081566b57d657efa4",
            "tags": {
              "Name": "test-3"
            },
            "tags_all": {
              "Name": "test-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cf5cbbbc3a87c99"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.public-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:255645000496:internet-gateway/igw-08f5753cb3083e6f6",
            "id": "igw-08f5753cb3083e6f6",
            "owner_id": "255645000496",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-05ca5dd55692bd518"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:loadbalancer/app/test-lb-tf11/46a49296574c04dc",
            "arn_suffix": "app/test-lb-tf11/46a49296574c04dc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf11-1052631036.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:loadbalancer/app/test-lb-tf11/46a49296574c04dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf11",
            "security_groups": [
              "sg-01cf5cbbbc3a87c99"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-081566b57d657efa4"
              },
              {
                "subnet_id": "subnet-0f50cd70171872bec"
              }
            ],
            "subnets": [
              "subnet-081566b57d657efa4",
              "subnet-0f50cd70171872bec"
            ],
            "vpc_id": "vpc-05ca5dd55692bd518",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:listener/app/test-lb-tf11/46a49296574c04dc/b322a1f4af80f0dc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:targetgroup/lb-tg/16fd3ffe7a60c6cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:listener/app/test-lb-tf11/46a49296574c04dc/b322a1f4af80f0dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:loadbalancer/app/test-lb-tf11/46a49296574c04dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.test-tg",
            "aws_security_group.ssh-allowed",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:targetgroup/lb-tg/16fd3ffe7a60c6cc",
            "arn_suffix": "targetgroup/lb-tg/16fd3ffe7a60c6cc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:targetgroup/lb-tg/16fd3ffe7a60c6cc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05ca5dd55692bd518"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:targetgroup/lb-tg/16fd3ffe7a60c6cc-20220421110435031500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:255645000496:targetgroup/lb-tg/16fd3ffe7a60c6cc",
            "target_id": "i-0c4efb25b14389bce"
          },
          "dependencies": [
            "aws_instance.demo-instance-1",
            "aws_lb_target_group.test-tg",
            "aws_security_group.ssh-allowed",
            "aws_subnet.public-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f388cbd7cf902241",
            "connectivity_type": "public",
            "id": "nat-0fac92003e1bda059",
            "network_interface_id": "eni-06a812acb7d9a7341",
            "private_ip": "192.168.0.245",
            "public_ip": "43.204.46.216",
            "subnet_id": "subnet-081566b57d657efa4",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.public-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-routeTable-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:255645000496:route-table/rtb-0aad218eeb864221c",
            "id": "rtb-0aad218eeb864221c",
            "owner_id": "255645000496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fac92003e1bda059",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-routeTable-2"
            },
            "tags_all": {
              "Name": "test-routeTable-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ca5dd55692bd518"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-routeTable1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:255645000496:route-table/rtb-0834251abd3f829aa",
            "id": "rtb-0834251abd3f829aa",
            "owner_id": "255645000496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f5753cb3083e6f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-routeTable1"
            },
            "tags_all": {
              "Name": "test-routeTable1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ca5dd55692bd518"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b0f919ce1b9cfb9",
            "route_table_id": "rtb-0834251abd3f829aa",
            "subnet_id": "subnet-081566b57d657efa4"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-routeTable1",
            "aws_subnet.public-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b09fbeb454d2b6bf",
            "route_table_id": "rtb-0834251abd3f829aa",
            "subnet_id": "subnet-0f50cd70171872bec"
          },
          "dependencies": [
            "aws_internet_gateway.test-igw",
            "aws_route_table.test-routeTable1",
            "aws_subnet.public-subnet1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b110299f22d24838",
            "route_table_id": "rtb-0aad218eeb864221c",
            "subnet_id": "subnet-07d319f40bec47144"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.test-routeTable-2",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:255645000496:security-group/sg-01cf5cbbbc3a87c99",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cf5cbbbc3a87c99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220421110353109600000001",
            "name_prefix": "terraform-",
            "owner_id": "255645000496",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ca5dd55692bd518"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:255645000496:subnet/subnet-07d319f40bec47144",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d319f40bec47144",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255645000496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-05ca5dd55692bd518"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:255645000496:subnet/subnet-081566b57d657efa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081566b57d657efa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255645000496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-05ca5dd55692bd518"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:255645000496:subnet/subnet-0f50cd70171872bec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f50cd70171872bec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255645000496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-05ca5dd55692bd518"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:255645000496:vpc/vpc-05ca5dd55692bd518",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05bba07ac23f6810b",
            "default_route_table_id": "rtb-04aff893521fb0459",
            "default_security_group_id": "sg-036283fb0f80e0b34",
            "dhcp_options_id": "dopt-05b50fca5939f509d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05ca5dd55692bd518",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04aff893521fb0459",
            "owner_id": "255645000496",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}